:art: hintergrund geändert

--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -17,7 +17,7 @@
     </script>
     <style>
     body {
-      background-image: url("https://web-assets.bcg.com/dims4/default/a54443b/2147483647/strip/true/crop/2880x1440+0+90/resize/800x400!/quality/90/?url=http%3A%2F%2Fboston-consulting-group-brightspot.s3.amazonaws.com%2Fca%2Fe5%2F4bd4ce07339cda0ee56e4e762cbe%2Fdigital-transforms-innovation-2880x1620-102729576-tcm9-180941.jpg"); --Image
+      background-image: url("https://www.fototapete.de/media/catalog/product/cache/1/thumbnail/9df78eab33525d08d6e5fb8d27136e95/P/6/P6027A-VD1_p.jpg"); --Image
       background-repeat: no-repeat;
       background-position: 0 0;
       background-size: 100%;
