--- a/src/main/resources/templates/Sides/Home/index.html
+++ b/src/main/resources/templates/Sides/Home/index.html
@@ -5,24 +5,60 @@
 </head>
 
 <body>
+
+<div class="container-xl">
+	<a class="navbar-brand" href="#">Container XL</a>
+	<button class="navbar-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggle-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarsExample07XL">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Link</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+				<ul class="dropdown-menu" aria-labelledby="dropdown07XL">
+					<li><a class="dropdown-item" href="#">Action</a></li>
+					<li><a class="dropdown-item" href="#">Another action</a></li>
+					<li><a class="dropdown-item" href="#">Something else here</a></li>
+				</ul>
+			</li>
+		</ul>
+		<form>
+			<input class="form-control" type="text" placeholder="Search" aria-label="Search">
+		</form>
+	</div>
+</div>
+
+
+<!--
+
 <img src="dagobert.png" alt="Paris" class="m-3 rounded mx-auto d-block" width="200" height="150">
 <div class="d-grid gap-2 m-5 align-items-center">
-	<button class="me-1 ps-2 pe-2 rounded btn btn-secondary btn-sm text-uppercase fw-bolder"
+	<button class="me-1 p-3 rounded btn btn-secondary btn-lg text-uppercase fw-bolder"
 			th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
 			type="button">Sparkauf
 	</button>
-	<button class="me-1 ps-3 pe-3 rounded btn btn btn-secondary btn-sm text-uppercase fw-bolder text-light"
+	<button class="me-1 ps-3 pe-3 rounded btn btn btn-secondary btn-lg text-uppercase fw-bolder text-light"
 			th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
 			th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
 			type="button">Einsparungen
 	</button>
-	<button class="me-1 ps-2 pe-2 rounded btn btn-secondary btn-sm text-uppercase fw-bolder text-light"
+	<button class="me-1 ps-2 pe-2 rounded btn btn-secondary btn-lg text-uppercase fw-bolder text-light"
 			th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
 			th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
 			type="button">Alle
 	</button>
 </div>
-
+--->
 
 </body>
 </html>
