--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -3,11 +3,12 @@
 <th:block th:fragment="head">
 
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="Components/style.css" media="screen" />
     <link
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-	
+    <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
     <script type="text/javascript"src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
@@ -16,7 +17,7 @@
     } );
     </script>
     <style>
-    body {
+
       background-image: url("https://www.fototapete.de/media/catalog/product/cache/1/thumbnail/9df78eab33525d08d6e5fb8d27136e95/P/6/P6027A-VD1_p.jpg"); --Image
       background-repeat: no-repeat;
       background-position: 0 0;
