--- a/src/main/resources/templates/Sides/Home/index.html
+++ b/src/main/resources/templates/Sides/Home/index.html
@@ -12,7 +12,7 @@
 	<img src="dagobert.png" class="m-3 rounded mx-auto d-block" width="200" height="150">
 	<div class="d-grid gap-2 m-5 align-items-center">
 	<button class="me-1 p-3 rounded btn btn-secondary btn-lg text-uppercase fw-bolder"
-	th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
+	th:onclick="|window.location.href='@{/spar/}'|"
 	type="button">Sparkauf
 	</button>
 	<button class="me-1 ps-3 pe-3 rounded btn btn btn-secondary btn-lg text-uppercase fw-bolder text-light"
