--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -8,17 +8,42 @@
 <div th:insert="/Components/header :: myheader"></div>
 
 <form method="post" th:action="@{/spar/}" th:object="${newEntry}">
-	<input id="buyDate" placeholder="Enter Produkt buyDate" required type="text" th:field="*{buyDate}"/>
-	<input id="produkt" placeholder="Enter Produkt Name" required type="text" th:field="*{produkt}"/>
-	<input id="menge" placeholder="Enter Menge" required type="text" th:field="*{menge}"/>
-	<!--
 
-	<input id="mHDDate" placeholder="Enter mHDDate" required type="text" th:field="*{mHDDate}"/>
-	--->
-	<input id="einkaufsPreis" placeholder="Enter EinkaufsPreis" required type="text" th:field="*{einkaufsPreis}"/>
-	<input id="normalPreis" placeholder="Enter NormalPreis" required type="text" th:field="*{normalPreis}"/>
+	<input id="buyDate" class="form-control" autocomplete="off" type="date" th:field="*{buyDate}"/>
+	<input placeholder="Enter Produkt Name" required type="text" th:field="*{produkt}"/>
+	<input placeholder="Enter Menge" required type="text" th:field="*{menge}"/>
+
+
+	<input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/>
+
+	<input placeholder="EinkaufsPreis" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/>
+	<input placeholder="NormalPreis" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/>
 
 	<input type="submit" value="Speichern">
 </form>
+<table id="dataTable" data-page-length='10' data-order='[[0, "asc"]]'
+	   class="table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
+	<thead class="sticky-top bg-white shadow">
+	<tr class="">
+		<th>buyDate</th>
+		<th>produkt</th>
+		<th>menge</th>
+		<th>mHDDate</th>
+		<th>einkaufsPreis</th>
+		<th>normalPreis</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr th:each="entry : ${entries}">
+		<td><span th:text="${entry.buyDate}"></span></td>
+		<td><span th:text="${entry.produkt}"></span></td>
+		<td><span th:text="${entry.menge}"></span></td>
+		<td><span th:text="${entry.mHDDate}"></span></td>
+		<td><span th:text="${entry.einkaufsPreis}"></span> € </td>
+		<td><span th:text="${entry.normalPreis}"></span> € </td>
+
+
+	</tbody>
+</table>
 </body>
 </html>
