--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -15,14 +15,14 @@
 	<form method="post" th:action="@{/spar/}" th:object="${newEntry}">
 
 		<input id="buyDate" class="form-control" autocomplete="off" type="date" th:field="*{buyDate}"/>
-		<input placeholder="Enter Produkt Name" required type="text" th:field="*{produkt}"/>
-		<input placeholder="Enter Menge" required type="text" th:field="*{menge}"/>
+		<input placeholder="Enter Produkt Name" class="form-control" required type="text" th:field="*{produkt}"/>
+		<input placeholder="Enter Menge" class="form-control" required type="text" th:field="*{menge}"/>
 
 
 		<input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/>
 
-		<input placeholder="EinkaufsPreis" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/>
-		<input placeholder="NormalPreis" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/>
+		<input placeholder="EinkaufsPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/>
+		<input placeholder="NormalPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/>
 
 		<input type="submit" value="Speichern">
 	</form>
