--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -14,18 +14,16 @@
 
 	<form method="post" th:action="@{/spar/}" th:object="${newEntry}">
 
-		<input id="buyDate" class="form-control" autocomplete="off" type="date" th:field="*{buyDate}"/>
-		<input placeholder="Enter Produkt Name" class="form-control" required type="text" th:field="*{produkt}"/>
-		<input placeholder="Enter Menge" class="form-control" required type="text" th:field="*{menge}"/>
-
-
-		<input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/>
-
-		<input placeholder="EinkaufsPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/>
-		<input placeholder="NormalPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/>
+		<div><label class="fw-bolder">Gekauft</label><input id="buyDate" class="form-control" autocomplete="off" type="date" th:field="*{buyDate}"/></div>
+		<div><label class="fw-bolder">Artikel</label><input id="product" class="form-control" required type="text" th:field="*{produkt}"/></div>
+		<div><label class="fw-bolder">Menge</label><input id="menge" class="form-control" required type="text" th:field="*{menge}"/></div>
+		<div><label class="fw-bolder">MHD</label><input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/></div>
+		<div><label class="fw-bolder">EK-Preis</label><input placeholder="EKPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/></div>
+		<div><label class="fw-bolder">Listen-Preis</label><input placeholder="NormalPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/></div>
 
 		<input type="submit" value="Speichern">
 	</form>
+
 	<table id="dataTable" data-page-length='10' data-order='[[0, "asc"]]'
 		   class="table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
 		<thead class="sticky-top bg-white shadow">
