--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -11,6 +11,7 @@
     <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
     <script type="text/javascript"src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="extensions/mobile/bootstrap-table-mobile.js"></script>
     <script type="text/javascript">
     $(document).ready( function () {
         $('#dataTable').DataTable();
