--- a/src/main/resources/templates/Components/header.html
+++ b/src/main/resources/templates/Components/header.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header mt-3" th:fragment="myheader">
+	<nav class="navbar ml-auto navbar-center navbar-dark sticky-top ">
 
-	<nav class="navbar ml-auto navbar-expand navbar-dark sticky-top ">
+	<div>
+		<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
+				th:classappend="${#httpServletRequest.getRequestURI() == '/spar/' ? 'active':''}"
+				th:onclick="|window.location.href='@{/spar/}'|"
+				type="button">Neu
+		</button>
+		<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
+				th:classappend="${#httpServletRequest.getRequestURI().startsWith('/spar/lager/') ? 'active':''}"
+				th:onclick="|window.location.href='@{/spar/lager/}'|"
+				type="button">Lager
+		</button>
+	</div>
 
-	<a class="navbar-brand ms-5" href="/home"><img class="" src="dagobert.png" alt="Logo" width="40" height="40" ></a>
-		<div>
-			<button class="nav-item me-1 ps-2 pe-2 rounded btn btn-outline-warning btn-lg text-uppercase fw-bolder"
-					th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
-					th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
-					type="button"><a  class="nav-link " th:text="'Alle'" />
-			</button>
-		</div>
+	<div class="me-5">
+	   <button title="release" th:text="${@versionsnummer.getVersion()}"
+			   type="button" disabled class="btn btn-outline-primary btn-sm ms-2"></button>
+	</div>
 
-		<div class="me-5">
-		   <button title="release" th:text="${@versionsnummer.getVersion()}" type="button" disabled class="btn btn-outline-primary btn-sm ms-2"></button>
-		</div>
 	</nav>
 
-    </div>
+</div>
