--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -5,51 +5,14 @@
 </head>
 
 <body class="bg-dark text-white ">
-<!--
 
-<div th:insert="/Components/header :: myheader"></div>
--->
-<div class="m-2">
+	<div th:insert="/Components/header :: myheader"></div>
 
+	<div class="m-2">
 
-	<form method="post" th:action="@{/spar/}" th:object="${newEntry}">
+		<div th:if="${view != 'lager'}" class="me-2" th:insert="/Sides/Spar/Components/formular :: formular"></div>
+		<div class="mt-2" th:insert="/Sides/Spar/Components/table :: table_all"></div>
 
-		<div><label class="fw-bolder">Gekauft</label><input id="buyDate" class="form-control" autocomplete="off" type="date" th:field="*{buyDate}"/></div>
-		<div><label class="fw-bolder">Artikel</label><input id="product" class="form-control" required type="text" th:field="*{produkt}"/></div>
-		<div><label class="fw-bolder">Menge</label><input id="menge" class="form-control" required type="text" th:field="*{menge}"/></div>
-		<div><label class="fw-bolder">MHD</label><input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/></div>
-		<div><label class="fw-bolder">EK-Preis</label><input placeholder="EKPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/></div>
-		<div><label class="fw-bolder">Listen-Preis</label><input placeholder="NormalPreis" class="form-control" type="number" min="0.00" max="10000.00" step="0.01" th:field="*{normalPreis}"/></div>
-
-		<input type="submit" value="Speichern">
-	</form>
-
-	<table id="dataTable" data-page-length='10' data-order='[[0, "asc"]]'
-		   class="table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
-		<thead class="sticky-top bg-white shadow">
-		<tr class="">
-			<th>Gekauft</th>
-			<th>Artikel</th>
-			<th>Menge</th>
-			<th>MHD</th>
-			<th>EK-Preis</th>
-			<th>L-Preis</th>
-			<th>Extra</th>
-		</tr>
-		</thead>
-		<tbody>
-		<tr th:each="entry : ${entries}">
-			<td><span th:text="${entry.buyDate}"></span></td>
-			<td><span th:text="${entry.produkt}"></span></td>
-			<td><span th:text="${entry.menge}"></span></td>
-			<td><span th:text="${entry.mHDDate}"></span></td>
-			<td><span th:text="${entry.einkaufsPreis}"></span> € </td>
-			<td><span th:text="${entry.normalPreis}"></span> € </td>
-			<td><a th:href="@{delete/__${entry.id}__}" class="btn btn-danger">Delete</a></td>
-
-
-		</tbody>
-	</table>
-</div>
+	</div>
 </body>
 </html>
