:rocket: insgesamt hinzugefügt

--- a/src/main/resources/templates/Sides/Home/index.html
+++ b/src/main/resources/templates/Sides/Home/index.html
@@ -8,6 +8,7 @@
 <!--
 <div th:insert="/Components/header :: myheader"></div>
 --->
+<div class="m-5 text-uppercase fw-bolder">Insgesamt eingespart: <span th:utext="${allMoneySavings}"></span> € </div>
 
 	<img src="dagobert.png" class="m-3 rounded mx-auto d-block" width="200" height="150">
 	<div class="d-grid gap-2 m-5 align-items-center">
