:rocket: th_if entfernt weil es im deploy nicht funktioinert

--- a/src/main/resources/templates/Components/header.html
+++ b/src/main/resources/templates/Components/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div class="header mt-3" th:fragment="myheader">
+<div class="header mt-3" th:fragment="header">
 	<nav class="navbar ml-auto navbar-center navbar-dark sticky-top ">
 
 	<div>
