--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -6,7 +6,7 @@
 
 <body class="bg-dark text-white ">
 
-	<div th:replace="/Components/header :: myheader"></div>
+	<div th:replace="/Components/header :: header"></div>
 
 	<div class="m-2">
 
