:rocket: th_if entfernt weil es im deploy nicht funktioinert

--- a/src/main/resources/templates/Components/header.html
+++ b/src/main/resources/templates/Components/header.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<body>
 <div class="header mt-3" th:fragment="header">
 	<nav class="navbar ml-auto navbar-center navbar-dark sticky-top ">
 
-	<div>
-		<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
-				th:classappend="${#httpServletRequest.getRequestURI() == '/spar/' ? 'active':''}"
-				th:onclick="|window.location.href='@{/spar/}'|"
-				type="button">Neu
-		</button>
-		<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
-				th:classappend="${#httpServletRequest.getRequestURI().startsWith('/spar/lager/') ? 'active':''}"
-				th:onclick="|window.location.href='@{/spar/lager/}'|"
-				type="button">Lager
-		</button>
-	</div>
+		<div>
+			<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
+					th:classappend="${#httpServletRequest.getRequestURI() == '/spar/' ? 'active':''}"
+					th:onclick="|window.location.href='@{/spar/}'|"
+					type="button">Neu
+			</button>
+			<button class="ms-2 p-3 rounded btn btn-outline-primary btn-lg text-uppercase fw-bolder"
+					th:classappend="${#httpServletRequest.getRequestURI().startsWith('/spar/lager/') ? 'active':''}"
+					th:onclick="|window.location.href='@{/spar/lager/}'|"
+					type="button">Lager
+			</button>
+		</div>
 
-	<div class="me-5">
-	   <button title="release" th:text="${@versionsnummer.getVersion()}"
-			   type="button" disabled class="btn btn-outline-primary btn-sm ms-2"></button>
-	</div>
+		<div class="me-5">
+			<button title="release" th:text="${@versionsnummer.getVersion()}"
+					type="button" disabled class="btn btn-outline-primary btn-sm ms-2"></button>
+		</div>
 
 	</nav>
-
 </div>
+
+</body>
