--- a/src/main/resources/templates/Sides/Home/index.html
+++ b/src/main/resources/templates/Sides/Home/index.html
@@ -6,7 +6,9 @@
 
 <body>
 
-<div class="m-5 text-uppercase fw-bolder">Insgesamt eingespart: <span th:utext="${allMoneySavings}"></span> € </div>
+<div class="m-5 text-uppercase fw-bolder">Insgesamt eingespart:
+
+	<span th:utext="${#numbers.formatDecimal(allMoneySavings == null ? 0 : allMoneySavings, 0, 0)}"></span> € </div>
 
 	<img src="dagobert.png" class="m-3 rounded mx-auto d-block" width="200" height="150">
 	<div class="d-grid gap-2 m-5 align-items-center">
