--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="Components/head :: head">
-	<title> Placeholder </title>
+	<title> Spar Buchungen </title>
 </head>
 
-<body class="bg-dark text-white ">
-
-	<div th:replace="Components/header :: header"></div>
+<body >
+	<div  class="d-block p-2 bg-secondary bg-gradient text-white">
+		<div th:replace="Components/header :: header"></div>
+	</div>
 
 	<div class="m-2">
 
