--- a/src/main/resources/templates/Sides/Home/index.html
+++ b/src/main/resources/templates/Sides/Home/index.html
@@ -6,25 +6,23 @@
 
 <body>
 
-<div class="m-5 text-uppercase fw-bolder">Insgesamt eingespart:
+	<div class="d-block p-4 bg-secondary bg-gradient text-white">
+		<div class="text-uppercase fw-bolder">Warenbestand:
+			<span th:utext="${#numbers.formatDecimal(allMoneySavings == null ? 0 : totalInventory, 0, 2)}"></span> € </div>
+		<div class=" text-uppercase fw-bolder">Eingespart:
+			<span th:utext="${#numbers.formatDecimal(allMoneySavings == null ? 0 : allMoneySavings, 0, 2)}"></span> € </div>
+	</div>
 
-	<span th:utext="${#numbers.formatDecimal(allMoneySavings == null ? 0 : allMoneySavings, 0, 0)}"></span> € </div>
-
-	<img src="dagobert.png" class="m-3 rounded mx-auto d-block" width="200" height="150">
+	<img src="logo.png" class="m-3 rounded mx-auto d-block" width="200" height="150">
 	<div class="d-grid gap-2 m-5 align-items-center">
-		<button class="me-1 p-3 rounded btn btn-secondary btn-lg text-uppercase fw-bolder"
-		th:onclick="|window.location.href='@{/spar/}'|"
-		type="button">Sparkauf
+		<button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder"
+			th:onclick="|window.location.href='@{/spar/}'|"
+			type="button">Sparkauf
 		</button>
-		<button class="me-1 ps-3 pe-3 rounded btn btn btn-secondary btn-lg text-uppercase fw-bolder text-light"
-		th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
-		th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
-		type="button">Einsparungen
-		</button>
-		<button class="me-1 ps-2 pe-2 rounded btn btn-secondary btn-lg text-uppercase fw-bolder text-light"
-		th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
-		th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
-		type="button">Alle
+		<button class="me-1 ps-2 pe-2 rounded btn btn-outline-primary-secondary btn-lg text-uppercase fw-bolder text-light"
+			th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
+			th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
+			type="button">Haushalt
 		</button>
 	</div>
 
