--- a/src/main/resources/templates/Sides/Spar/Components/table.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table.html
@@ -8,10 +8,11 @@
         <thead class="sticky-top bg-white shadow">
         <tr class="">
             <th th:if="${view == 'lager'}">Restbestand</th>
-            <th>Gekauft</th>
+            <th th:if="${view == 'inventur'}">Restbestand</th>
+            <th th:if="${view != 'inventur'}">Gekauft</th>
             <th>Artikel</th>
             <th>Menge</th>
-            <th>MHD</th>
+            <th th:if="${view != 'inventur'}">MHD</th>
             <th>EK-Preis</th>
             <th>L-Preis</th>
             <th>Extra</th>
@@ -20,10 +21,18 @@
         <tbody>
         <tr th:each="entry : ${entries}">
             <td th:if="${view == 'lager'}"><span th:text="${entry.mengeLager}"></span></td>
-            <td><span th:text="${entry.buyDate}"></span></td>
+            <td th:if="${view == 'inventur'}" >
+                <button class="ms-2 me-2 p-1 rounded btn btn-outline-danger indigo-300 btn-lg text-uppercase fw-bolder"
+                        th:onclick="|window.location.href='@{/inventur/plus__${entry.id}__}'|" type="button"><i class="bi bi-plus-square"></i>
+                </button>
+                <span th:utext="${#numbers.formatDecimal(entry.mengeLager == null ? 0 : entry.mengeLager, 2, 1)}"></span>
+                <button class="ms-2 p-1 rounded btn btn-outline-success indigo-300 btn-lg text-uppercase fw-bolder"
+                    th:onclick="|window.location.href='@{/inventur/plus__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
+                </button></td>
+            <td th:if="${view != 'inventur'}"><span th:text="${entry.buyDate}"></span></td>
             <td><span th:text="${entry.produkt}"></span></td>
             <td><span th:text="${entry.menge}"></span></td>
-            <td><span th:text="${entry.mHDDate}"></span></td>
+            <td th:if="${view != 'inventur'}"><span th:text="${entry.mHDDate}"></span></td>
             <td><span th:text="${entry.einkaufsPreis}"></span> € </td>
             <td><span th:text="${entry.normalPreis}"></span> € </td>
             <td><a th:href="@{delete/__${entry.id}__}" class="btn btn-danger">Delete</a></td>
