--- a/src/main/resources/templates/Sides/Spar/Components/table.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table.html
@@ -23,11 +23,11 @@
             <td th:if="${view == 'lager'}"><span th:text="${entry.mengeLager}"></span></td>
             <td th:if="${view == 'inventur'}" >
                 <button class="ms-2 me-2 p-1 rounded btn btn-outline-danger indigo-300 btn-lg text-uppercase fw-bolder"
-                        th:onclick="|window.location.href='@{/inventur/plus__${entry.id}__}'|" type="button"><i class="bi bi-plus-square"></i>
+                        th:onclick="|window.location.href='@{/spar/inventur/plus/__${entry.id}__}'|" type="button"><i class="bi bi-plus-square"></i>
                 </button>
                 <span th:utext="${#numbers.formatDecimal(entry.mengeLager == null ? 0 : entry.mengeLager, 2, 1)}"></span>
                 <button class="ms-2 p-1 rounded btn btn-outline-success indigo-300 btn-lg text-uppercase fw-bolder"
-                    th:onclick="|window.location.href='@{/inventur/plus__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
+                    th:onclick="|window.location.href='@{/spar/inventur/minus/__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
                 </button></td>
             <td th:if="${view != 'inventur'}"><span th:text="${entry.buyDate}"></span></td>
             <td><span th:text="${entry.produkt}"></span></td>
