--- a/src/main/resources/templates/Sides/Spar/Components/table.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table.html
@@ -3,7 +3,7 @@
 
 <div th:fragment="table_all">
 
-    <table id="dataTable" data-page-length='10' data-order='[[1, "desc"]]'
+    <table id="dataTable" data-page-length='50' data-order='[[1, "asc"]]'
            class=" table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
         <thead class="sticky-top bg-white shadow">
         <tr class="">
@@ -12,8 +12,8 @@
             <th th:if="${view != 'inventur'}">Gekauft</th>
             <th>Artikel</th>
             <th>Menge</th>
-            <th th:if="${view != 'inventur'}">MHD</th>
-            <th>EK-Preis</th>
+            <th>MHD</th>
+            <th th:if="${view != 'inventur'}">EK-Preis</th>
             <th>L-Preis</th>
             <th>Extra</th>
         </tr>
@@ -27,13 +27,13 @@
                 </button>
                 <span th:utext="${#numbers.formatDecimal(entry.mengeLager == null ? 0 : entry.mengeLager, 2, 1)}"></span>
                 <button class="ms-2 p-1 rounded btn btn-outline-success indigo-300 btn-lg text-uppercase fw-bolder"
-                    th:onclick="|window.location.href='@{/spar/inventur/minus/__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
+                        th:onclick="|window.location.href='@{/spar/inventur/minus/__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
                 </button></td>
             <td th:if="${view != 'inventur'}"><span th:text="${entry.buyDate}"></span></td>
             <td><span th:text="${entry.produkt}"></span></td>
             <td><span th:text="${entry.menge}"></span></td>
-            <td th:if="${view != 'inventur'}"><span th:text="${entry.mHDDate}"></span></td>
-            <td><span th:text="${entry.einkaufsPreis}"></span> € </td>
+            <td><span th:text="${entry.mHDDate}"></span></td>
+            <td th:if="${view != 'inventur'}"><span th:text="${entry.einkaufsPreis}"></span> € </td>
             <td><span th:text="${entry.normalPreis}"></span> € </td>
             <td><a th:href="@{delete/__${entry.id}__}" class="btn btn-danger">Delete</a></td>
 
