:construction_worker: buttons verkleinert

--- a/src/main/resources/templates/Components/header.html
+++ b/src/main/resources/templates/Components/header.html
@@ -7,22 +7,22 @@
 	<nav class="navbar ml-auto navbar-center sticky-top ">
 
 		<div>
-			<button class="ms-2 p-3 rounded btn btn-outline-light indigo-300 btn-lg text-uppercase fw-bolder"
+			<button class="ms-2 p-3 rounded btn btn-outline-light indigo-300 text-uppercase fw-bolder"
 					th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}"
 					th:onclick="|window.location.href='@{/}'|"
 					type="button"><i class="bi bi-box-arrow-left"></i>
 			</button>
-			<button class="ms-1 p-3 rounded btn btn-outline-light btn-lg text-uppercase fw-bolder"
+			<button class="ms-1 p-3 rounded btn btn-outline-light text-uppercase fw-bolder"
 					th:classappend="${#httpServletRequest.getRequestURI() == '/spar/' ? 'active':''}"
 					th:onclick="|window.location.href='@{/spar/}'|"
 					type="button">Neu
 			</button>
-			<button class="ms-1 p-3 rounded btn btn-outline-light btn-lg text-uppercase fw-bolder"
+			<button class="ms-1 p-3 rounded btn btn-outline-light text-uppercase fw-bolder"
 					th:classappend="${#httpServletRequest.getRequestURI().startsWith('/spar/lager/') ? 'active':''}"
 					th:onclick="|window.location.href='@{/spar/lager/}'|"
 					type="button">Lager
 			</button>
-			<button class="ms-1 p-3 rounded btn btn-outline-light btn-lg text-uppercase fw-bolder"
+			<button class="ms-1 p-3 rounded btn btn-outline-light text-uppercase fw-bolder"
 					th:classappend="${#httpServletRequest.getRequestURI().startsWith('/spar/inventur/') ? 'active':''}"
 					th:onclick="|window.location.href='@{/spar/inventur/}'|"
 					type="button">Inventur
