--- a/src/main/resources/templates/Sides/Spar/Components/table.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table.html
@@ -7,7 +7,7 @@
            class=" table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
         <thead class="sticky-top bg-white shadow">
         <tr class="">
-            <th th:if="${view != 'inventur'}">Restbestand</th>
+            <th >Restbestand</th>
             <th th:if="${view != 'inventur'}">Gekauft</th>
             <th>Artikel</th>
             <th>Menge</th>
