--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -6,7 +6,7 @@
 
 <body >
 	<div  class="d-block p-2 bg-secondary bg-gradient text-white">
-		<div th:replace="Components/header :: header"></div>
+		<div th:replace="Sides/Spar/Components/header :: header"></div>
 	</div>
 
 	<div class="m-2">
