--- a/src/main/resources/templates/Sides/Home/Components/navbar.html
+++ b/src/main/resources/templates/Sides/Home/Components/navbar.html
@@ -9,12 +9,11 @@
 
     <button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder"
             th:onclick="|window.location.href='@{/spar/}'|"
-            type="button">Sparkauf
+            type="button"> Sparkauf
     </button>
-    <button class="me-1 ps-2 pe-2 rounded btn btn-outline-primary-secondary btn-lg text-uppercase fw-bolder text-light"
-            th:classappend="${#httpServletRequest.getRequestURI().startsWith('/logs/logs_all_by_status') ? 'active':''}"
-            th:onclick="|window.location.href='@{/logs/logs_all_by_status?errorStatus=ERROR}'|"
-            type="button">Haushalt
+    <button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder" disabled
+            th:onclick="|window.location.href='@{#}'|"
+            type="button"> Haushaltsbuch
     </button>
 
 </div>
