:recycle: Button geändert

--- a/src/main/resources/templates/Sides/Spar/Components/table.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table.html
@@ -8,20 +8,20 @@
         <thead class="sticky-top bg-white shadow">
         <tr class="">
             <th >Restbestand</th>
-            <th th:if="${view != 'inventur'}">Gekauft</th>
+            <th class="d-none d-lg-block" th:if="${view != 'inventur'}">Gekauft</th>
             <th>Artikel</th>
             <th>Menge</th>
             <th>MHD</th>
-            <th th:if="${view != 'inventur'}">EK-Preis</th>
-            <th>L-Preis</th>
-            <th th:if="${view == 'lager'}">K-Jahresverbrauch</th>
+            <th class="d-none d-lg-block" th:if="${view != 'inventur'}">EK-Preis</th>
+            <th class="d-none d-lg-block">L-Preis</th>
+            <th class="d-none d-lg-block" th:if="${view == 'lager'}">K-Jahresverbrauch</th>
             <th th:if="${view == 'lager'}">Extra</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="entry : ${entries}">
             <td th:if="${view != 'inventur'}"><span th:text="${entry.mengeLager}"></span></td>
-            <td th:if="${view == 'inventur'}" >
+            <td class="d-none d-lg-block" th:if="${view == 'inventur'}" >
                 <button class="ms-2 me-2 p-1 rounded btn btn-outline-danger indigo-300 btn-lg text-uppercase fw-bolder"
                         th:onclick="|window.location.href='@{/spar/inventur/plus/__${entry.id}__}'|" type="button"><i class="bi bi-plus-square"></i>
                 </button>
@@ -33,9 +33,9 @@
             <td><span th:text="${entry.produkt}"></span></td>
             <td><span th:text="${entry.menge}"></span></td>
             <td><span th:text="${entry.mHDDate}"></span></td>
-            <td th:if="${view != 'inventur'}"><span th:text="${entry.einkaufsPreis}"></span> € </td>
-            <td><span th:text="${entry.normalPreis}"></span> € </td>
-            <td th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.kalkulatorischerJahresverbrauch == null ? 0 : entry.kalkulatorischerJahresverbrauch, 2, 1)}"></span>
+            <td class="d-none d-lg-block" th:if="${view != 'inventur'}"><span th:text="${entry.einkaufsPreis}"></span> € </td>
+            <td class="d-none d-lg-block"><span th:text="${entry.normalPreis}"></span> € </td>
+            <td class="d-none d-lg-block" th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.kalkulatorischerJahresverbrauch == null ? 0 : entry.kalkulatorischerJahresverbrauch, 2, 1)}"></span>
             <td th:if="${view == 'lager'}">
                 <a th:href="@{delete/__${entry.id}__}" class="btn btn-danger me-2">Delete</a>
                 <a th:href="@{edit/__${entry.id}__}" class="btn btn-warning">Edit</a>
