--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -3,30 +3,31 @@
 <th:block th:fragment="head">
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-		rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-    <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <script type="text/javascript"src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="extensions/mobile/bootstrap-table-mobile.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.2.8/css/rowReorder.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.dataTables.min.css">
+
+    <!-- Skripts -->
+    <script type="text/javascript"src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript"src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript"src="https://cdn.datatables.net/rowreorder/1.2.8/js/dataTables.rowReorder.min.jss"></script>
+    <script type="text/javascript"src="https://cdn.datatables.net/responsive/2.3.0/js/dataTables.responsive.min.js"></script>
+
+
     <script type="text/javascript">
-        $(document).ready( function () {
-            $('#dataTable').DataTable();
+       $(document).ready(function() {
+            var table = $('#dataTable').DataTable( {
+                rowReorder: {
+                    selector: 'td:nth-child(2)'
+                },
+                responsive: true
+            } );
         } );
     </script>
-    <style>
-
-      background-image: url("https://www.fototapete.de/media/catalog/product/cache/1/thumbnail/9df78eab33525d08d6e5fb8d27136e95/P/6/P6027A-VD1_p.jpg"); --Image
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-size: 100%;
-      background-color: #000000; --When image ends, blackness!
-
-    }
-  </style>
 
 </th:block>
