--- a/src/main/resources/templates/Sides/Spar/Components/table_xl.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table_xl.html
@@ -3,8 +3,10 @@
 
 <div th:fragment="table_all">
 
-    <table id="dataTable" data-page-length='50' data-order='[[1, "asc"]]'
-           class=" table table-sm table-striped table-hover table-bordered align-middle justify-end"  >
+    <!--<table class="display nowrap" style="width:100%">-->
+
+    <table id="dataTable" data-page-length='50' data-order='[[0, "asc"]]'
+           class="display nowrap" style="width:100%" >
         <thead class="sticky-top bg-white shadow">
         <tr class="">
             <th >Restbestand</th>
