--- a/src/main/resources/templates/Sides/Spar/Components/formular.html
+++ b/src/main/resources/templates/Sides/Spar/Components/formular.html
@@ -3,24 +3,21 @@
 
 <div  th:fragment="formular">
 
-    <form class="was-validated" method="post" th:action="@{/spar/}" th:object="${newEntry}">
+    <form class="was-validated m-2" method="post" th:action="@{/spar/}" th:object="${newEntry}">
 
         <div th:if="${view == 'editEntry'}"><label class="fw-bolder">id</label><input id="id" class="form-control is valid" autocomplete="off" readonly type="number" th:field="*{id}"/></div>
         <div><label class="fw-bolder">Gekauft</label><input id="byed" class="form-control is valid" autocomplete="off" type="date" th:field="*{buyDate}"/></div>
-        <div><label class="fw-bolder">Artikel</label><input id="product" class="form-control" required type="text" th:field="*{produkt}"/>
-            <div class="invalid-feedback">Der Artikel muss Angeben werden.</div></div>
+        <div><label class="fw-bolder">Artikel</label><input id="product" class="form-control" required type="text" th:field="*{produkt}"/></div>
 
-        <div><label class="fw-bolder">Menge</label><input id="menge" class="form-control" required type="text" th:field="*{menge}"/>
-            <div class="invalid-feedback">Die Menge muss Angeben werden.</div></div>
-        <div th:if="${view == 'editEntry'}"><label class="fw-bolder">Menge Lager</label><input id="mengeLager" class="form-control" required type="text" th:field="*{mengeLager}"/>
-            <div class="invalid-feedback">Die Menge muss Angeben werden.</div></div>
+        <div><label class="fw-bolder">Menge</label><input id="menge" class="form-control" required type="text" th:field="*{menge}"/></div>
+        <div th:if="${view == 'editEntry'}"><label class="fw-bolder">Menge Lager</label><input id="mengeLager" class="form-control" required type="text" th:field="*{mengeLager}"/></div>
 
         <div><label class="fw-bolder">MHD</label><input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/></div>
         <div><label class="fw-bolder">EK-Preis</label><input class="form-control" required type="number" min="0.01" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/></div>
         <div><label class="fw-bolder">Listen-Preis</label><input class="form-control" required type="number" min="0.01" max="10000.00" step="0.01" th:field="*{normalPreis}"/></div>
 
         <div class="btn-group mt-2 me-1 col-12" role="group">
-            <input type="reset" class="btn btn-warning col-6" value="Änderung verwerfen">
+            <input type="reset" class="btn btn-warning col-6" value="Verwerfen">
             <input type="submit" class="btn btn-success col-6" value="Speichern">
         </div>
 
