--- a/src/main/resources/templates/Sides/Spar/spar_buchungen.html
+++ b/src/main/resources/templates/Sides/Spar/spar_buchungen.html
@@ -5,23 +5,10 @@
 </head>
 
 <body >
-	<div  class="d-block p-2 bg-secondary bg-gradient text-white">
-		<div th:replace="Sides/Spar/Components/header :: header"></div>
-	</div>
 
-	<div class="m-2">
+	<div th:replace="Sides/Spar/Components/header :: header"></div>
+	<div th:if="${view == 'newEntry' || view == 'editEntry'}" th:insert="Sides/Spar/Components/formular :: formular"></div>
+	<div th:insert="Sides/Spar/Components/table_xl :: table_all"></div>
 
-
-		<div th:if="${view == 'newEntry' || view == 'editEntry'}" class="me-2" th:insert="Sides/Spar/Components/formular :: formular"></div>
-
-
-
-
-			<div class="mt-2" th:insert="Sides/Spar/Components/table_xl :: table_all"></div>
-
-
-
-
-	</div>
 </body>
 </html>
